added proxies and api exception handling, iterator complete

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-MONOG_CONNECTION_STRING=mongodb+srv://dusklight:<password>@cluster0.9yn79.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-
+MONGO_CONNECTION_STRING=mongodb+srv://dusklight:1234qazw0987@cluster0.9yn79.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 START_PAGE=1
 END_PAGE=2
